Added all main functionality

--- a/VehicleSpeedControl/VehicleSpeedControl.csproj
+++ b/VehicleSpeedControl/VehicleSpeedControl.csproj
@@ -58,8 +58,14 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.DirectoryServices" />
+    <Reference Include="System.DirectoryServices.AccountManagement" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.IdentityModel" />
     <Reference Include="System.Runtime" />
+    <Reference Include="System.Security" />
+    <Reference Include="System.ServiceModel" />
+    <Reference Include="System.ServiceModel.Web" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -159,13 +165,15 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Attributes\RequestTimeValidation.cs" />
+    <Compile Include="Controllers\DataInputController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\RecordsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\MinAndMaxByDateRequest.cs" />
     <Compile Include="Models\Record.cs" />
-    <Compile Include="Models\SpeedThreshold.cs" />
+    <Compile Include="Models\SpeedThresholdRequest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -329,6 +337,13 @@
     <Content Include="Scripts\popper.js.map" />
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
+    <Content Include="Views\DataInput\CreateRecordView.cshtml" />
+    <Content Include="Views\DataInput\Index.cshtml" />
+    <Content Include="Views\DataInput\SpeedThresholdView.cshtml" />
+    <Content Include="Views\DataInput\SpeedThresholdRequestView.cshtml" />
+    <Content Include="Views\DataInput\MinAndMaxByDateRequestView.cshtml" />
+    <Content Include="Views\DataInput\MinAndMaxByDateView.cshtml" />
+    <Content Include="Views\DataInput\ErrorsView.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
